--- a/rwa4_group19/package.xml
+++ b/rwa4_group19/package.xml
@@ -8,6 +8,8 @@
   <maintainer email="aneesh.dandime9@gmail.com">aneeshd9</maintainer>
   <license>TODO: License declaration</license>
 
+   <depend>ariac_msgs</depend>
+
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
