--- a/rwa4_group19/package.xml
+++ b/rwa4_group19/package.xml
@@ -3,7 +3,7 @@
 <package format="3">
   <name>rwa4_group19</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>RWA4</description>
   <maintainer email="tanujthakkar720@gmail.com">tanujthakkar</maintainer>
   <maintainer email="aneesh.dandime9@gmail.com">aneeshd9</maintainer>
   <license>TODO: License declaration</license>
